clusters/yjgbg-com-k3s/pg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
# docker run --name phpmyadmin -d -e PMA_HOST=dbhost -p 8080:80 phpmyadmin
# apiVersion: serving.knative.dev/v1
# kind: Service
# metadata:
#   name: index
#   namespace: postgres
# spec:
#   template:
#     metadata:
#       annotations:
#         networking.knative.dev/server-httpoption: "enabled"
#         autoscaling.knative.dev/window: "600s"
#     spec:
#       containers:
#       - image: docker.1ms.run/elestio/pgadmin:REL-9_8
#         name: pgadmin
#         imagePullPolicy: IfNotPresent
#         envFrom:
#         - secretRef:
#             name: pgadmin
#         env:
#         - name: PGADMIN_LISTEN_PORT
#           value: "8080"
#         ports:
#         - containerPort: 8080
#           protocol: TCP
#         readinessProbe:
#           successThreshold: 1
#           httpGet:
#             path: "/login"
#             port: 8080
#         resources: 
#           requests:
#             cpu: 200m
#             memory: 200m
