clusters/yjgbg-com-k3s/solr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solr
