clusters/yjgbg-com-k3s/git.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: index
  namespace: git
spec:
  template:
    spec:
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data
      - name: gitea-config
        persistentVolumeClaim:
          claimName: gitea-config
      containers:
      - image: docker.gitea.com/gitea:1.25.3-rootless
        name: gitea
        imagePullPolicy: IfNotPresent
        envFrom:
        - configMapRef:
            name: gitea
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: "/var/lib/gitea"
          name: gitea-data
        volumeMounts:
        - mountPath: "/etc/gitea"
          name: gitea-data
        resources: 
          requests:
            cpu: 1000m
            memory: 1000m
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 3000
# services:
#   server:
#     image: docker.gitea.com/gitea:1.25.3-rootless
#     restart: always
#     volumes:
#       - ./data:/var/lib/gitea
#       - ./config:/etc/gitea
#       - /etc/timezone:/etc/timezone:ro
#       - /etc/localtime:/etc/localtime:ro
#     ports:
#       - "3000:3000"
#       - "2222:2222"
