clusters/yjgbg-com-k3s/rustfs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3
---
# ksvc
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: index
  namespace: s3
spec:
  template:
    spec:
      volumes:
      - name: rustfs-data
        persistentVolumeClaim:
          claimName: rustfs-data
      containers:
      - image: rustfs/rustfs:latest
        name: rustfs
        ports:
        - containerPort: 9000
          protocol: TCP
        # - containerPort: 9001
        #   protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: rustfs-data
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 0
        resources:
          requests:
            cpu: 200m
            memory: 200m
        env:
          - name: RUSTFS_CONSOLE_ENABLE
            value: false
          - name: RUSTFS_SERVER_DOMAINS
            value: "s3.yjgbg.com"
        commands: "/data"
