clusters/yjgbg-com-k3s/s3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3
---
# ksvc
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: index
  namespace: s3
spec:
  template:
    spec:
      volumes:
      - name: rustfs-data
        persistentVolumeClaim:
          claimName: rustfs-data
      containers:
      - image: docker.m.daocloud.io/rustfs/rustfs:latest
        name: rustfs
        ports:
        - containerPort: 9001
          protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: rustfs-data
        readinessProbe:
          successThreshold: 1
          tcpSocket:
            port: 0
        resources:
          requests:
            cpu: 50m
            memory: 50m
        envFrom:
        - secretRef:
            name: rustfs-aksk
        env:
          - name: RUSTFS_CONSOLE_ENABLE
            value: "true"
          - name: RUSTFS_SERVER_DOMAINS
            value: "s3.yjgbg.com"
        args: ["/data"]
