clusters/yjgbg-com-k3s/proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubectl
---
apiVersion: v1
kind: Service
metadata:
  name: kubectl-external
  namespace: kubectl
spec:
  ports:
    - protocol: TCP
      port: 6443
      targetPort: 6443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kubectl-external
  namespace: kubectl
subsets:
  - addresses:
      - ip: 192.168.31.200
    ports:
      - port: 6443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubectl-external
  namespace: kubectl
spec:
  rules:
    - host: kubectl.yjgbg.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubectl-external
              servicePort: 6443
