clusters/yjgbg-com-k3s/ssh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ssh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: ssh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: onaci/docker-http-https-echo:onaci
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: 200m
            memory: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-service
  namespace: ssh
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ssh-ingress-route
  namespace: ssh
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`ssh.yjgbg.com`)
    kind: Rule
    priority: 2
    services:
    - name: ssh-service
      kind: Service
      namespace: ssh
      port: 80
    middlewares:
    - name: traefik-github-oauth-plugin
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-github-oauth-plugin
  namespace: ssh
spec:
  plugin:
    traefik-github-oauth-plugin:
      apiBaseUrl: https://ssh.yjgbg.com
      # apiSecretKey: optional_secret_key_if_not_on_the_internal_network
      authPath: /_auth
      # jwtSecretKey: optional_secret_key
      logLevel: info
      whitelist:
        logins:
          - yjgbg
